As a user I can delete added items from todo list [Delivers #185804917]
